Fixed dark mode functionality

--- a/src/pages/homepage/homepage.styles.scss
+++ b/src/pages/homepage/homepage.styles.scss
@@ -95,6 +95,7 @@
   border: none;
   outline: none;
   height: 75px;
+  margin-bottom: 2rem;
   .down-arrow {
     transition: all 0.5s;
   }
